--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,8 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="facebook_app_id">2212307122162841</string>
     <string name="internet_toast">Please check your internet connection and try again later</string>
+    <string name="private_accountdescription">With a private account, only users you approve can follow you and view your contents and likes. Your existing followers won\'t be affected.</string>
+    <string name="allowothers_description">If you disable Allow Others to Find Me, other users will not receive suggestions to follow you.</string>
     <string-array name="CountryCodes">
         <item>93,AF</item>
         <item>355,AL</item>
